--- a/report.tex
+++ b/report.tex
@@ -609,23 +609,11 @@ To test the statistical significance of the mean differences between groups (in 
 
 \subsection{Research Questions and Hypotheses}
 \label{RQs}
-In section \ref{ResearchObjective}, we described the research objectives in general terms. Now that we have described how to model the longitudinal changes in an open source community's collaboration networks, we can be more specific about the research questions, and the hypotheses for our statistical tests. The following are the null hypotheses for across-group comparisons using the Multivariate Analysis of Variance Between Multiple Groups tests.
-
-\subsubsection{Null Hypothesis \# 1:} 
-There are no statistically significant differences in vectors of means of the developer-oriented model of longitudinal changes of software projects in U.F. category and No.F. category.
-
-\subsubsection{Null Hypothesis \# 2:} 
-There are no statistically significant differences in vectors of means of the developer-oriented model of longitudinal changes of software projects in H.F. category and No.F. category.
-
-\subsubsection{Null Hypothesis \# 3:} 
-There are no statistically significant differences in vectors of means of the developer-oriented model of longitudinal changes of software projects in U.F. category and H.F. category.
-
-
-\subsection{Predictions}
-Software development is a collective effort, so, theories about human behavior from sociology and psychology could help explain how software developers interact and collectively develop software. In particular, the following theories about human behavior are the bases for our hypotheses. Based on these, we expect to see the predictions listed in section \
-
+In section \ref{ResearchObjective}, we described the research objectives in general terms. Now that we have described how to model the longitudinal changes in an open source community's collaboration networks, we can be more specific about the research questions, and the hypotheses for our statistical tests. In the following, two behavior models from social sciences are briefly explained. We used this models as guiding theories for our hypotheses.
 
 \subsubsection{Behavior Models}
+Software development is a collective effort, so, theories about human behavior from sociology and psychology could help explain how software developers interact and collectively develop software. In particular, the following theories about human behavior are the bases for our hypotheses. 
+
 \paragraph{} \textbf{Balance theory} \cite{Heider} talks about a motivation of individuals to move toward psychological balance. Balance theory considers cognitive consistency as a motive that drives sentiment or liking relationships, as well as liking of things created by or associated with the alter in the relationship.
 
 We may explain U.F. forked projects because of ``personal differences'' as a results of cognitive inconsistency between the liking relationship of other developer(s) and the software and community created by or associated with them. 
@@ -635,9 +623,19 @@ We may explain U.F. forked projects because of ``personal differences'' as a res
 We may explain U.F. forked projects because of ``more community-driven development'' as a by-result of developers' homophile collaborator selection.
 
 
-\subsubsection{Expectation}
+\subsubsection{Research Questions and Hypotheses}
+The following are the null hypotheses for across-group comparisons using the Multivariate Analysis of Variance Between Multiple Groups tests. Our prediction is that patterns exist in the data, and those patterns will show statistically significant differences between different categories of forks. Statistically speaking, we'll be able to reject the following null hypotheses:
 
-XXX predictions
+\subsubsection{Null Hypothesis \# 1:} 
+\hspace{10 mm} There are no statistically significant differences in vectors of means of the developer-oriented model of longitudinal changes of software projects in U.F. category and No.F. category.
+
+\subsubsection{Null Hypothesis \# 2:} 
+\hspace{10 mm} There are no statistically significant differences in vectors of means of the developer-oriented model of longitudinal changes of software projects in H.F. category and No.F. category.
+
+\subsubsection{Null Hypothesis \# 3:} 
+\hspace{10 mm} There are no statistically significant differences in vectors of means of the developer-oriented model of longitudinal changes of software projects in U.F. category and H.F. category.\\
+
+If the data does not exhibit statistically significant differences, then our study fails, and our assumptions cannot be proven. We argue that based on the guiding theories and the collaboration data we gathered, if the forking reasons were socially related, they should be reflected in the data, and so, should be reflected in the longitudinal model of their collaboration network evolution.  This is a conjecture, and our study will try to show that this conjecture is true, using sound statistical modeling.
 
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
