--- a/report.tex
+++ b/report.tex
@@ -91,8 +91,6 @@ Forking in FOSS, either as an non-friendly split or a friendly divide, affects t
 
 We use an actor-oriented approach to statistically model the changes a FOSS community goes through in the run-up to a fork. The model represents the tie formation, breakage, and maintenance. It uses several snapshots of the network as observed data to estimate the influence of several statistical effects on formation observed networks. Exact calculation of the model is not trivial, so, instead we simulate the changes and estimate the model using a Markov Chain Monte Carlo approach. 
 
-XXX
-
 When we find a well-fitting model, we can test our hypothesis about model parameters, the contributing effects using T-tests and Multivariate Analysis of Variance Between Multiple Groups (Multivariate ANOVA). Our method enables us to make meaningful statements about whether the network dynamics depends on  particular parameters/effects with a p-value, indicating the statistical significance level. 
 
 This approach may help predict formation of unhealthy dynamics, which gives the community a heads-up when they can still take action to ensure the sustainability of the project.
@@ -115,7 +113,7 @@ Additionally, studies of FOSS communities tend to suffer from an important limit
 
 Identification is the first step to rectify an undesirable dynamic before the damage is done. A community that does not manage growing pains may end up stagnating or dissolving. Managing growing pains is especially important in the case of FOSS projects, where near half the project contributors are volunteers \cite{Forrest}. Oh et al. \cite{Oh} have argued that openness in FOSS is ``[...] generally perceived as having a positive connotation, however, the term can also be interpreted as referring to some nonconstructive characteristics, such as unobstructed exit, susceptible, vulnerable, fragile, lacking effective regulation, and so on. The unobstructed exit and lack of regulatory force inherent in the FOSS community can result in a community's susceptibility and vulnerability to herded exits by its participants. Commercial vendor intervention, an alternative project becoming available, and licensing issues can result in some original core members ceasing to provide their loyal service for the community, which can prompt their coworkers to leave as well'' \cite{Oh}. Identification of recipes for success or stagnation, sustainability or fragmentation may lead to a set of best practices and pitfalls.\\
 
-Our research proposes using temporal social network analysis to study the evolution and social dynamics of FOSS communities. Specifically, we propose using a longitudinal exponential family random graph statistical model to investigate the driving forces in formation and dissolution of communities. Additionally,  to complement the statistical study, we propose doing a qualitative interview study for validating the findings. With these techniques we aim to identify better measures for influence, shifts of influence, measures associated with unhealthy group dynamics, for example a simmering conflict, in addition to early indicators of major events in the lifespan of a community. One set of dynamics we are especially interested in, are those that lead FOSS projects to fork.\\
+I propose to use temporal social network analysis to study the evolution and social dynamics of FOSS communities. Specifically, we propose using a longitudinal exponential family random graph statistical model to investigate the driving forces in formation and dissolution of communities. Additionally,  to complement the statistical study, we propose doing a qualitative interview study for validating the findings. With these techniques we aim to identify better measures for influence, shifts of influence, measures associated with unhealthy group dynamics, for example a simmering conflict, in addition to early indicators of major events in the lifespan of a community. One set of dynamics we are especially interested in, are those that lead FOSS projects to fork.\\
 
 \begin{table}[!ht]
 \centering
@@ -136,12 +134,33 @@ Legal issues & X.Org \& XFree\\
 \end{tabular}
 \end{table}
 
-\begin{figure} [!ht]
+\begin{table}[!ht]
 \centering
-\caption[The frequency of reasons for forking]{The frequency of reasons for forking as classified by Robles and Gonzalez-Barahona \cite{Robles}}
-\label{figureReasonsForForkingPieChart}
-\epsfig{file=ForkingReasonsPieChart.png, width=\columnwidth}
-\end{figure}
+\caption[The frequency of main reasons for forking]{The frequency of main reasons for forking as classified by Robles and Gonzalez-Barahona \cite{Robles}}
+\label{tableReasonsForForkingFrequency}
+\begin{tabular}{p{0.6\columnwidth} p{0.2\columnwidth}}
+\hline\noalign{\smallskip}
+\textbf{Reason} & \textbf{Frequency} \\
+\noalign{\smallskip}\hline\noalign{\smallskip}
+Technical & 60 (27.3\%)\\ \hline
+Discontinuation of the original project & 44 (20.0\%)  \\ \hline
+More community-driven development & 29 (13.2\%) \\ \hline
+Legal issues &  24 (10.9\%) \\ \hline
+Commercial strategy forks &  20 (9.1\%)  \\ \hline
+Differences among developer team &  16 (7.3\%)  \\ \hline
+Experimental &  5  (2.3\%) \\ \hline
+Not Found &  22 (10.0\%) \\ 
+\noalign{\smallskip}\hline
+\end{tabular}
+\end{table}
+
+
+%\begin{figure} [!ht]
+%\centering
+%\caption[The frequency of reasons for forking]{The frequency of reasons for forking as classified by Robles and Gonzalez-Barahona \cite{Robles}}
+%\label{figureReasonsForForkingPieChart}
+%\epsfig{file=ForkingReasonsPieChart.png, width=\columnwidth}
+%\end{figure}
 
 This proposal report is organized as follows: Section \ref{relatedwork} presents related literature on open source social communities, the gap in the literature, and discusses why the issue needs to be studied. 
 Then, Section \ref{ResearchGoals} presents our research objective and research questions. After that, in section \ref{methodology} presents how data gathering, statistical modeling, and qualitative analysis are proposed to be done, as well as our initial hypotheses. In section \ref{sectionInitialStudy}, we present results of our initial study. Section \ref{timelineSection}, shows the proposed timeline for the research and the author's graduation. And lastly, section \ref{threatsToValidity} we discuss the threats to validity.\\
@@ -206,7 +225,24 @@ Community dynamics was the focus of a more recent study by Hannemann and Klamma 
 
 Social interactions reflect the changes the community goes through, and so, it can be used to describe the context surrounding a forking event. Social interactions in FOSS can happen, for example, in the form of mailing list email correspondence, bug report issue follow-ups, and source code co-authoring. 
 
-We consider three of the seven main reasons for forking \cite{Robles}, as listed in Table \ref{tableReasonsForForking} and Figure \ref{tableReasonsForForking} to be socially related. By socially-related, we mean, the forking categories that should have left traces in the developers' interactions data. Such traces may be identified using longitudinal modeling of the interactions, without digging into the contents of the communications. These three reasons are (1) Personal differences among developer team, (2) The need for more community-driven development, and (3) Technical differences for addition of functionality. 
+We consider the following three of the seven main reasons for forking \cite{Robles} to be socially related: (1) Personal differences among developer team, (2) The need for more community-driven development, and (3) Technical differences for addition of functionality. 
+
+\begin{table}[!ht]
+\centering
+\caption[The socially-related forking reasons]{The socially-related reasons for forking }
+\label{tableReasonsForForkingSociallyRelated}
+\begin{tabular}{p{0.6\columnwidth} p{0.2\columnwidth}}
+\hline\noalign{\smallskip}
+\textbf{Reason} & \textbf{Frequency} \\
+\noalign{\smallskip}\hline\noalign{\smallskip}
+Differences among developer team &  16 (7.3\%)  \\ \hline
+More community-driven development & 29 (13.2\%) \\ \hline
+Technical & 60 (27.3\%)\\ 
+\noalign{\smallskip}\hline
+\end{tabular}
+\end{table}
+
+By socially-related, we mean, the forking categories that should have left traces in the developers' interactions data. Such traces may be identified using longitudinal modeling of the interactions, without digging into the contents of the communications. These three reasons are (1) Personal differences among developer team, (2) The need for more community-driven development, and (3) Technical differences for addition of functionality. 
 
 %The other categories could be the focus of another research study, whose scope does not have a large overlap with the scope of this study. \\
 
@@ -259,19 +295,19 @@ To find patterns uniquely associated with undesirable forks, we need to gather d
 \textbf{Type of forking} & \textbf{Abbreviation} \\
 \noalign{\smallskip}\hline\noalign{\smallskip}
 Undesirable \& socially-related forking & U.F. \\ \hline
-Other (Healthy/Other) \& socially-related forking & H.F. \\\hline
+Other socially-related forking & H.F. \\\hline
 No forking at all (as the control group) & No.F. \\
 \noalign{\smallskip}\hline
 \end{tabular}
 \end{table}
 
-We define Undesirable Forking (U.F.) as the projects forked because of \textit{Personal differences among developers team}, or because of the need for \textit{more community-driven development}. One-fifth (20.5\%) of the 220 forked projects fall into this category.
+We define Undesirable and socially-related Forking (U.F.) as the projects forked because of \textit{Personal differences among developers team}, or because of the need for \textit{more community-driven development}. These situations are undesirable because they imply an increase in cost of maintenance, redundant or wasted efforts, and a lost shared value. One-fifth (20.5\%) of the 220 forked projects fall into this category \cite{Robles}.
 
-Other (Healthy/Other) (H.F.) is defined as projects forked because of \textit{technical differences (Addition of functionality)}. More than a quarter (27.3\%) of the 220 forked projects fall into this category.
+Other socially-related (H.F.) is defined as projects forked because of \textit{technical differences (Addition of functionality)}. More than a quarter (27.3\%) of the 220 forked projects fall into this category.
 
-These three categories are the socially-related categories, which means, the social context during the run-up to forking arguably should be reflected in their social interactions. 
+These three categories are the socially-related categories, because for forks driven by personal conflicts, the need more community-driven development, and technical differences, we expect to see the social context during the run-up to forking captured by the projects' social artifacts.
 
-To find projects in U.F. and H.F. categories, we looked at the list of all significant open source software forks in the past three decades as compiled by Robles and Gonzalez-Barahona \cite{Robles}. Their study found the reasons behind each fork, listed in Table \ref{tableReasonsForForking}. We applied three selection criteria to the 220 forked projects on that list to find projects in U.F. and H.F. categories. A project was short-listed as either a U.F. or H.F. if \textbf{a)} the forking was recent, i.e., happened after the year 2000, \textbf{b)} its data was existent and available to access and download online, or was made accessible to us after our requests; and \textbf{c)} the project had a sizable developer community, i.e., more than a dozen developers, which means it would be large enough to make a sociogram for a meaningful statistical analysis. For the No.F. category, we chose well-known, stable projects that have been active long enough (to experience turbulence; defined as two years); and yet have not forked; and are similar in size of the development team. Similarity in size is a constrain that our statistical method imposes for the results to be meaningful, as described in detail in section \ref{statisticalModel}.  The preceding criteria resulted in the projects listed in Table \ref{forkedProjectsDataCollected}. The rest of the 220 forked projects were discarded, because they did not meet the described filtering criteria.
+To find projects in U.F. and H.F. categories, we looked at the list of all significant open source software forks in the past three decades as compiled by Robles and Gonzalez-Barahona \cite{Robles}. Their study found the reasons behind each fork, listed in Table \ref{tableReasonsForForking}. We applied three selection criteria to the 220 forked projects on that list to find projects in U.F. and H.F. categories. A project was short-listed as either a U.F. or H.F. if \textbf{a)} the forking was recent, i.e., happened after the year 2000, \textbf{b)} its data was existent and available to access and download online, or was made accessible to us after our requests; and \textbf{c)} the project had a sizable developer community, i.e., more than a dozen developers, which means it would be large enough to make a sociogram for a meaningful statistical analysis. For the No.F. category, we chose well-known, stable projects that had been around for a while (two years), and had large communities; and had not forked; and were similar in size of the development team. Similarity in size is a constrain that our statistical method imposes for the results to be meaningful, as described in detail in section \ref{statisticalModel}.  The preceding criteria resulted in the projects listed in Table \ref{forkedProjectsDataCollected}. The rest of the 220 forked projects were discarded, because they did not meet the described filtering criteria.
 
 
 \begin{table}
@@ -313,9 +349,9 @@ Two types of analysis can be done on sociograms: Either a \textit{cross-sectiona
 
 A longitudinal study can look at the sociograms in the following two distinct approaches: 
 \begin{enumerate}
-\item A \textit{network-specific} approach, which can be called a skin-deep \textit{measurement-specific} look, in which, we focus on the observed networks, measure their properties, to describe the structure of the \textit{observed networks} with numeric summaries/descriptors, e.g., in Figures \ref{figureNodesEdgesTimeR} and \ref{figureDiameterTimeR}. Many studies measuring centralities as their fall into this category. 
+\item A \textit{network-specific} approach, which can be called a skin-deep \textit{measurement-specific} look, in which, we focus on the observed networks, measure their properties, to describe the structure of the \textit{observed networks} with numeric summaries/descriptors, e.g., in Figures \ref{figureNodesEdgesTimeR} and \ref{figureDiameterTimeR}. Many studies measuring centralities as their only metrics, fall into this category. 
 
-\item A \textit{population-processes} approach, in which we treat an observed network as one realization from a set of all possible networks with the same number of nodes, and with similar characteristics. In a population-processes approach, the observed network is only good to help us understand the social forces/processes that generated it, because we are interested in the forces/processes that underlie the structure and changes of the network; these reflect the values shared or not shared by the community members, and represent the group behavior, and behavior change trends that lead to a forking event. 
+\item A \textit{population-processes} approach, in which we treat an observed network as one instance from a set of all possible networks with the same number of nodes, and with similar characteristics. In a population-processes approach, the observed network is only good to help us understand the social forces/processes that generated it, because we are interested in the forces/processes that underlie the structure and changes of the network; these reflect the values shared or not shared by the community members, and represent the group behavior, and behavior change trends that lead to a forking event. 
 
 \end{enumerate}
 
@@ -938,7 +974,7 @@ This technique can be used to identify the people involved in conflict and the d
 \label{figureAmarokStachedAreaChart}
 \end{figure*}
 
-The video for the Amarok project fork is available online\footnote{Video visualizations available at \href{http://eecs.oregonstate.edu/~azarbaam/OSS2014/}{http://eecs.oregonstate.edu/\textasciitilde azarbaam/OSS2014/}}, and the results from our quantitative analysis of the betweenness centralities and the network diameters are shown in Figure \ref{figureAmarokStachedAreaChart}. The results show that the network diameter has not increased over the period of the fork, which shows a resilient network. The video shows the dynamic changes in the network structure, again typical of a healthy network, rather than of simmering conflict. These indicators suggest that the Amarok fork in 2010 belongs to the ``addition of technical functionality'' rationale for forking, as there are no visible social conflict.
+The video for the Amarok project fork is available online\footnote{Video visualizations available at \href{http://eecs.oregonstate.edu/~azarbaam/OSS2014/}{http://eecs.oregonstate.edu/\textasciitilde azarbaam/OSS2014/}}, and the results from our quantitative analysis of the betweenness centralities and the network diameters are shown in Figure \ref{figureAmarokStachedAreaChart}. The results show that the network diameter has not increased over the period of the fork, which shows a resilient network. The video shows the dynamic changes in the network structure, again typical of a non-unhealthy network, rather than of simmering conflict. These indicators suggest that the Amarok fork in 2010 belongs to the ``addition of technical functionality'' rationale for forking, as there are no visible social conflict.
 
 \subsubsection{Asterisk Project}
 \begin{figure*}
