--- a/report.tex
+++ b/report.tex
@@ -290,7 +290,7 @@ Detecting change patterns, requires gathering  relevant data, cleaning it, and a
 \begin{figure}[!ht]
 \centering
 \epsfig{file=flowchart.eps, width=0.9\columnwidth}
-\caption{Proposed methodology in a glance}
+\caption{The methodology in a glance}
 \label{FlowChart}
 \end{figure}
 
